<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg9"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >


    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/zs"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/history"
        android:textAllCaps="true"
        android:textColor="#0B0607"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:layout_width="379dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb2"
                android:gravity="center"
                android:text="@string/level"
                android:textColor="#F80155"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/level_1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb"
                android:gravity="center"
                android:text="@string/level_1"
                android:textColor="#0929C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/level_2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb"
                android:gravity="center"
                android:text="@string/level_2"
                android:textColor="#0929C1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/level_3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb"
                android:gravity="center"
                android:text="@string/level_3"
                android:textColor="#0929C1"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lastest_score"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb2"
                android:gravity="center"
                android:text="@string/lastest_score"
                android:textColor="#F80155"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/level_1score"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb"
                android:gravity="center"
                android:text="@string/level_1score"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/level_2score"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb"
                android:gravity="center"
                android:text="@string/level_2score"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/level_3score"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/bb"
                android:gravity="center"
                android:text="@string/level_3score"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="379dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/home"
        android:onClick="home"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />



</LinearLayout>