<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg9"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >


    <TextView
        android:id="@+id/test_level_at"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/zs"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/level_at"
        android:textAllCaps="true"
        android:textColor="#090607"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/word_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/word_at"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:layout_width="336dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bb4"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/right_word_static"
        android:textAllCaps="true"
        android:textColor="#150E11"
        android:textSize="24sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/right_word"
        android:layout_width="336dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bb4"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/right_word"
        android:textAllCaps="true"
        android:textColor="#13090C"
        android:textSize="24sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:layout_width="336dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bb4"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/read_word_static"
        android:textAllCaps="true"
        android:textColor="#150E11"
        android:textSize="24sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/read_word"
        android:layout_width="336dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bb4"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/read_word"
        android:textAllCaps="true"
        android:textColor="#150E11"
        android:textSize="24sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/score"
        android:layout_width="336dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bb4"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/score"
        android:textAllCaps="true"
        android:textColor="#0C080A"
        android:textSize="24sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:onClick="nextWord"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/next_word"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>