<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg9"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >


    <TextView
        android:id="@+id/test_level_at"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/zs"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/test_level_at"
        android:textAllCaps="true"
        android:textColor="#0B0607"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/max_point"
        android:layout_width="241dp"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bb3"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/max_point"
        android:textAllCaps="true"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/my_point"
        android:layout_width="347dp"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bb4"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/my_point"
        android:textAllCaps="true"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"

        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/retry"
        android:onClick="retry"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/next_level"
        android:onClick="nextLevel"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/next_level"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/home"
        android:onClick="home"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>