<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg8"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/zs"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="#1B0E12"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />


    <TextView
        android:layout_width="384dp"
        android:layout_height="211dp"
        android:layout_marginBottom="8dp"
        android:background="#0068B2"
        android:padding="16dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/start_test"
        android:onClick="startTest"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/start_test"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_level1"
        android:onClick="changeLevel"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/change_level1"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/history"
        android:onClick="history"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/history"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exit"
        android:onClick="exit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>

