<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg9"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >


    <TextView
        android:id="@+id/change_level"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/zs"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/change_level"
        android:textAllCaps="true"
        android:textColor="#090708"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/level_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/level_at"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <RadioGroup
        android:layout_marginTop="50dp"
        android:id="@+id/groupradio"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton1"
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:text="@string/level_1"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:text="@string/level_2"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:text="@string/level_3"
            android:textSize="24sp" />
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"

        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/home"
        android:onClick="home"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:text="หน้าแรก"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>