<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg9"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:id="@+id/test_level_at"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/zs"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/test_level_at"
        android:textAllCaps="true"
        android:textColor="#0E090B"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />
    <!--android:text="แบบฝึกหัดฝึกออกเสียงภาษาไทย"-->

    <TextView
        android:id="@+id/word_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/word_at"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/give_word"
        android:layout_width="319dp"
        android:layout_height="169dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/textbox4"
        android:gravity="center"
        android:lineSpacingExtra="30sp"
        android:padding="16dp"
        android:text="@string/give_word"
        android:textAllCaps="true"
        android:textColor="#090506"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        tools:visibility="visible" />

    <pl.droidsonroids.gif.GifImageButton
        android:id="@+id/animation"
        android:onClick="say"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="97dp"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:lineSpacingExtra="14sp"
        android:scaleType="center"
        android:background="@drawable/microphone1"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <Button
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/butt"
        android:lineSpacingExtra="14sp"
        android:onClick="home"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="#F44336"
        android:textColorHint="#F44336"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>